# collembola-project

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: deploy.yml  scraper.yml
Antigravity/: implementation_plan.md  task.md  walkthrough.md
Antigravity/generated-code/: check_accepted.py  check_collembola.py  check_common_names.py  check_details_views.py  check_distribuicao.py  check_form_values.py  check_habitat.py  check_hierarquia.py  check_image_ajax.py  check_image_endpoints.py  check_images.py  check_js_files.py  check_order.py  check_page_js.py  check_views.py  collembola_taxa.json  find_ajax_calls.py  find_ajax_urls.py  find_custom_tags.py  find_image_functions.py  find_images.py  find_last_page.py  find_more_js.py  find_page_forms.py  find_rows.py  get_all_collembola.py  inspect_jbrj.py  inspect_select_options.py  parse_results.py  parse_table.py  print_all_rows.py  query_children.py  search_result.html  test_api.py  test_in.py  test_query.py
docs/: data-contract.md
scraper/: README.md  enrich_data.py  generate_svg.py  pyproject.toml  test_api.py  test_api2.py  translate_json.py
scraper/data/: animals.json  image_overrides.json
scraper/src/: scraper.py
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website/src/: App.css  App.jsx  data.json  index.css
website/src/components/: AnimalCard.jsx  BrazilMap.jsx  BrazilSVG.jsx
website/src/pages/: Catalog.jsx  SpeciesDetail.jsx
